--- a/index2.css
+++ b/index2.css
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(45deg #8460ed #ff1252);
+    background: linear-gradient(45deg, #8460ed, #ff1252);
 
 }
 .menu{
